fix spacing

--- a/app/assets/stylesheets/components/Sola10k.css.scss
+++ b/app/assets/stylesheets/components/Sola10k.css.scss
@@ -137,7 +137,7 @@
   }
 
   .statement-form {
-    margin: 10px auto 30px auto;
+    margin: 60px auto 30px auto;
 
     h3 {
       margin: 30px 0 25px 0;
